# hightorrent

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml
scripts/: pre-commit.sh
src/: hash.rs  id.rs  lib.rs  list.rs  magnet.rs  piece_length.rs  target.rs  torrent.rs  torrent_error.rs  torrent_file.rs  tracker.rs
tests/: bittorrent-v1-emma-goldman.magnet  bittorrent-v1-emma-goldman.torrent  bittorrent-v2-hybrid-test.magnet  bittorrent-v2-test.magnet  libtorrent.rs  magnet_force_name.rs  sea_orm.rs  unknown_tracker_scheme.rs
