[package]
name = "hightorrent"
description = "High-level torrent library which supports Bittorrent v1, v2 and hybrid torrents"
version = "0.2.0"
edition = "2021"
authors = [ "angrynode <angrynode@kl.netlib.re>" ]
documentation = "https://docs.rs/hightorrent"
keywords = [ "torrent", "magnet", "bittorrent", "infohash", "tracker" ]
rust-version = "1.64"
readme = "README.md"
license = "AGPL-3.0-only"

[lib]
name = "hightorrent"
path = "src/lib.rs"

[dependencies]
bt_bencode = "0.8"
sha1 = "0.10"
sha256 = "1.5"
rustc-hex = "2.1"
serde = { version = "1", features = [ "derive" ] }
url = "2.5"

[features]
magnet_force_name = []

[[test]]
name = "magnet_force_name"
path = "tests/magnet_force_name.rs"
required-features = [ "magnet_force_name" ]
test = true
