[package]
name = "hightorrent"
description = "High-level torrent library which supports Bittorrent v1, v2 and hybrid torrents"
version = "0.3.2"
edition = "2021"
authors = [ "angrynode <angrynode@kl.netlib.re>" ]
documentation = "https://docs.rs/hightorrent"
keywords = [ "torrent", "magnet", "bittorrent", "infohash", "tracker" ]
rust-version = "1.64"
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/angrynode/hightorrent"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "hightorrent"
path = "src/lib.rs"

[dependencies]
bt_bencode = "0.8"
sha1 = "0.10"
sha256 = "1.5"
rustc-hex = "2.1"
serde = { version = "1", features = [ "derive" ] }
fluent-uri = { version = "0.4", features = [ "serde" ] }

[dev-dependencies]
serde_json = "1"

[features]
magnet_force_name = []
unknown_tracker_scheme = []

[[test]]
name = "magnet_force_name"
path = "tests/magnet_force_name.rs"
required-features = [ "magnet_force_name" ]
test = true

[[test]]
name = "unknown_tracker_scheme"
path = "tests/unknown_tracker_scheme.rs"
required-features = [ "unknown_tracker_scheme" ]
test = true
