[package]
name = "hightorrent"
description = "High-level torrent library which supports Bittorrent v1, v2 and hybrid torrents"
version = "0.4.0"
edition = "2021"
authors = [ "angrynode <angrynode@kl.netlib.re>" ]
documentation = "https://docs.rs/hightorrent"
keywords = [ "torrent", "magnet", "bittorrent", "infohash", "tracker" ]
rust-version = "1.64"
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/angrynode/hightorrent"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "hightorrent"
path = "src/lib.rs"

[dependencies]
bt_bencode = "0.8"
sha1 = "0.10"
sha256 = "1.5"
rustc-hex = "2.1"
serde = { version = "1", features = [ "derive" ] }
fluent-uri = { version = "0.4", features = [ "serde" ] }
# For Sea-ORM integration
sea-orm = { version = "2.0.0-rc.19", optional = true }
sea-orm-migration = { version = "2.0.0-rc.19", optional = true }
async-tempfile = { version = "0.7", optional = true }
tokio = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
magnet_force_name = []
unknown_tracker_scheme = []
sea_orm = [ "dep:sea-orm" ]
test_sea_orm = [ "dep:sea-orm", "sea-orm/sqlx-sqlite", "dep:tokio", "tokio/macros", "tokio/rt", "dep:async-tempfile", "dep:sea-orm-migration", "sea-orm-migration/runtime-tokio" ]

[[test]]
name = "magnet_force_name"
path = "tests/magnet_force_name.rs"
required-features = [ "magnet_force_name" ]
test = true

[[test]]
name = "unknown_tracker_scheme"
path = "tests/unknown_tracker_scheme.rs"
required-features = [ "unknown_tracker_scheme" ]
test = true

[[test]]
name = "sea_orm"
path = "tests/sea_orm.rs"
required-features = [ "sea_orm", "test_sea_orm" ]
test = true